--- a/yanghao_web/src/main/webapp/WEB-INF/web.xml
+++ b/yanghao_web/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <!--设置配置文件的路径-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext_spring.xml</param-value>
+        <param-value>classpath:applicationContext_spring.xml,classpath:spring-security.xml</param-value>
     </context-param>
 
   <!--解决中文乱码-->
@@ -45,4 +45,16 @@
     <servlet-name>dispatcherServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
+    <!--spring-security  权限控制-->
+    <filter>
+        <!-- filter-name的名称是不能改动，只能为下面的值 -->
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <!-- 指定权限框架所管理的URL的后缀 /* : 所有URL都被管理（包含你要访问.jsp,.html,.js,... -->
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
